cabal-version: 3.0
name:          sqlite-simple-interpolate
version:       0.1
synopsis:      Interpolated SQLite queries via quasiquotation
description:   Interpolated SQLite queries via quasiquotation
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    ruby0b
copyright:     ©2022 ruby0b ©2019 Elliot Cameron
homepage:      https://github.com/ruby0b/sqlite-simple-interpolate
category:      Database

source-repository head
  type:     git
  location: git://github.com/ruby0b/sqlite-simple-interpolate.git

library
  hs-source-dirs:   src
  exposed-modules:
    Database.SQLite.Simple.QQ.Interpolated
    Database.SQLite.Simple.QQ.Interpolated.Parser

  build-depends:
    , base              >=4.5 && <5
    , haskell-src-meta  >=0.6 && <0.9
    , mtl               >=2.1 && <2.3
    , parsec            ^>=3.1
    , sqlite-simple     >=0.1
    , template-haskell

  ghc-options:      -Wall -O2
  default-language: Haskell2010
